--- a/comparison.html
+++ b/comparison.html
@@ -1,4 +1,4 @@
-<!--Landing Page-->
+<!--Comparison Page-->
 
 <!DOCTYPE html>
 <html lang="us-en">
@@ -44,20 +44,20 @@
             <li class="dropdown" id="large-screen-dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plots<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="visualizations/temp.html">Max Temperature</a></li>
-                <li><a href="visualizations/humidity.html">Humidity</a></li>
-                <li><a href="visualizations/cloudiness.html">Cloudiness</a></li>
-                <li><a href="visualizations/wind-speed.html">Wind Speed</a></li>
+                <li><a href="temp.html">Max Temperature</a></li>
+                <li><a href="humidity.html">Humidity</a></li>
+                <li><a href="cloudiness.html">Cloudiness</a></li>
+                <li><a href="wind-speed.html">Wind Speed</a></li>
               </ul>
             </li>
 
             <!-- small screen dropdown -->
             <a href="#" class="mobile-button" id="small-screen-dropdown" role="button">Plots<span class="caret"></span></a>
             <ul class="nav navbar-nav mobile-menu" id="small-screen-dropdown-list">
-              <li><a href="visualizations/temp.html">Max Temperature</a></li>
-              <li><a href="visualizations/humidity.html">Humidity</a></li>
-              <li><a href="visualizations/cloudiness.html">Cloudiness</a></li>
-              <li><a href="visualizations/wind-speed.html">Wind Speed</a></li>
+              <li><a href="temp.html">Max Temperature</a></li>
+              <li><a href="humidity.html">Humidity</a></li>
+              <li><a href="cloudiness.html">Cloudiness</a></li>
+              <li><a href="wind-speed.html">Wind Speed</a></li>
             </ul>
 
             <li><a href="comparison.html">Comparison</a></li>
@@ -73,50 +73,46 @@
       <div class="row">
 
         <!-- main content -->
-        <main class="col-md-7 col-xs-12">
-          <div class="main-padding">
-            <h1 class="header">Summary: Latitude vs. X</h1>
-            <hr>
-            <section class="main-content">
-              <img class="main-image" src="Resources/assets/images/Fig1.png" alt="max temperature vs latitude">
-              <p>The purpose of this project was to analyze how weather changes as you get closer to or further from the equator. Weather parameters considered here are temperature, cloudiness, wind speed, and humidity.</p>
-              <p>To accomplish this objective, weather data were pulled from the <a href="https://openweathermap.org/api">OpenWeatherMap API</a> to assemble a dataset on over 500 cities across different latitudes. After assembling the dataset, python Matplotlib library was used to plot weather parameters vs. latitude. Finally, this visualization dashboard was created using HTML and CSS. This site provides the source data, visualizations, as well as explanations of how weather changes across latitudes on Earth.</p>
-            </section>
-          </div>
-        </main>
+        <main class="comparison-padding">
+            
+          <h1 class="header">Comparison: Latitude vs. X</h1>
+          <hr>
+          <p>Click any plot to get an in-depth analysis.</p>
 
-        <!-- side content -->
-        <side class="col-md-5 col-xs-12">
-          <div class="side-padding">
-            <h2 class="header">Visualizations</h2>
-            <hr>
-            <section class="container-fluid">
-              <div class="row side-row">
-                <div class="col-md-6 col-xs-3">
-                  <a href="visualizations/temp.html">
+          <section class="container-fluid">
+              <div class="row main-row">
+                <div class="col-md-6 col-sm-12">
+                  <h3 class="header">vs. Max Temperature</h3>
+                  <a href="temp.html">
                     <img src="Resources/assets/images/Fig1.png" alt="max temperature vs latitude" class="side-image">
                   </a>
+                  <hr class="small-screen-hr">
                 </div>
-                <div class="col-md-6 col-xs-3">
-                  <a href="visualizations/humidity.html">
+                <div class="col-md-6 col-sm-12">
+                  <h3 class="header">vs. Humidity</h3>
+                  <a href="humidity.html">
                     <img src="Resources/assets/images/Fig2.png" alt="humidity vs latitude" class="side-image">
                   </a>
+                  <hr class="small-screen-hr">
                 </div>
                 <div class="w-100"></div>
-                <div class="col-md-6 col-xs-3">
-                  <a href="visualizations/cloudiness.html">
+                <div class="col-md-6 col-sm-12">
+                  <h3 class="header">vs. Cloudiness</h3>
+                  <a href="cloudiness.html">
                     <img src="Resources/assets/images/Fig3.png" alt="cloudiness vs latitude" class="side-image">
                   </a>
+                  <hr class="small-screen-hr">
                 </div>
-                <div class="col-md-6 col-xs-3">
-                  <a href="visualizations/wind-speed.html">
+                <div class="col-md-6 col-sm-12">
+                  <h3 class="header">vs. Wind Speed</h3>
+                  <a href="wind-speed.html">
                     <img src="Resources/assets/images/Fig4.png" alt="wind speed vs latitude" class="side-image">
                   </a>
                 </div>
               </div>
             </section>
-          </div>
-        </side>
+
+        </main>
 
       </div>
     </div>
