--- a/humidity.html
+++ b/humidity.html
@@ -1,4 +1,4 @@
-<!--Landing Page-->
+<!-- Visualization Page - Humidity -->
 
 <!DOCTYPE html>
 <html lang="us-en">
@@ -44,20 +44,20 @@
             <li class="dropdown" id="large-screen-dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plots<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="visualizations/temp.html">Max Temperature</a></li>
-                <li><a href="visualizations/humidity.html">Humidity</a></li>
-                <li><a href="visualizations/cloudiness.html">Cloudiness</a></li>
-                <li><a href="visualizations/wind-speed.html">Wind Speed</a></li>
+                <li><a href="temp.html">Max Temperature</a></li>
+                <li><a href="humidity.html">Humidity</a></li>
+                <li><a href="cloudiness.html">Cloudiness</a></li>
+                <li><a href="wind-speed.html">Wind Speed</a></li>
               </ul>
             </li>
 
             <!-- small screen dropdown -->
             <a href="#" class="mobile-button" id="small-screen-dropdown" role="button">Plots<span class="caret"></span></a>
             <ul class="nav navbar-nav mobile-menu" id="small-screen-dropdown-list">
-              <li><a href="visualizations/temp.html">Max Temperature</a></li>
-              <li><a href="visualizations/humidity.html">Humidity</a></li>
-              <li><a href="visualizations/cloudiness.html">Cloudiness</a></li>
-              <li><a href="visualizations/wind-speed.html">Wind Speed</a></li>
+              <li><a href="temp.html">Max Temperature</a></li>
+              <li><a href="humidity.html">Humidity</a></li>
+              <li><a href="cloudiness.html">Cloudiness</a></li>
+              <li><a href="wind-speed.html">Wind Speed</a></li>
             </ul>
 
             <li><a href="comparison.html">Comparison</a></li>
@@ -75,12 +75,11 @@
         <!-- main content -->
         <main class="col-md-7 col-xs-12">
           <div class="main-padding">
-            <h1 class="header">Summary: Latitude vs. X</h1>
+            <h1 class="header">Humidity</h1>
             <hr>
             <section class="main-content">
-              <img class="main-image" src="Resources/assets/images/Fig1.png" alt="max temperature vs latitude">
-              <p>The purpose of this project was to analyze how weather changes as you get closer to or further from the equator. Weather parameters considered here are temperature, cloudiness, wind speed, and humidity.</p>
-              <p>To accomplish this objective, weather data were pulled from the <a href="https://openweathermap.org/api">OpenWeatherMap API</a> to assemble a dataset on over 500 cities across different latitudes. After assembling the dataset, python Matplotlib library was used to plot weather parameters vs. latitude. Finally, this visualization dashboard was created using HTML and CSS. This site provides the source data, visualizations, as well as explanations of how weather changes across latitudes on Earth.</p>
+              <img class="main-image-nonfloat" src="Resources/assets/images/Fig2.png" alt="humidity vs latitude">
+              <p>Across latitudes, there are always places where relative humidity is 100%, which means that the air is fully saturated with water and is very likely to rain or snow. Up to 5-10 degrees latitude on both sides of the equator, the weather is consistently humid, because high temperature, abundant waterbodies, and dense forest bring lots of water vapor to the air. Further from the equator, there is a wide range of humidity in both northern and southern hemisphere. Northern hemisphere is generally less humid than southern hemisphere, because northern hemisphere genearlly has more land and less waterbodies.</p>
             </section>
           </div>
         </main>
@@ -93,23 +92,23 @@
             <section class="container-fluid">
               <div class="row side-row">
                 <div class="col-md-6 col-xs-3">
-                  <a href="visualizations/temp.html">
+                  <a href="temp.html">
                     <img src="Resources/assets/images/Fig1.png" alt="max temperature vs latitude" class="side-image">
                   </a>
                 </div>
-                <div class="col-md-6 col-xs-3">
-                  <a href="visualizations/humidity.html">
+                <div class="col-md-6 col-xs-3 side-highlight">
+                  <a href="humidity.html">
                     <img src="Resources/assets/images/Fig2.png" alt="humidity vs latitude" class="side-image">
                   </a>
                 </div>
                 <div class="w-100"></div>
                 <div class="col-md-6 col-xs-3">
-                  <a href="visualizations/cloudiness.html">
+                  <a href="cloudiness.html">
                     <img src="Resources/assets/images/Fig3.png" alt="cloudiness vs latitude" class="side-image">
                   </a>
                 </div>
                 <div class="col-md-6 col-xs-3">
-                  <a href="visualizations/wind-speed.html">
+                  <a href="wind-speed.html">
                     <img src="Resources/assets/images/Fig4.png" alt="wind speed vs latitude" class="side-image">
                   </a>
                 </div>
