--- a/temp.html
+++ b/temp.html
@@ -1,4 +1,4 @@
-<!--Landing Page-->
+<!-- Visualization Page - Max Temperature -->
 
 <!DOCTYPE html>
 <html lang="us-en">
@@ -44,20 +44,20 @@
             <li class="dropdown" id="large-screen-dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Plots<span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a href="visualizations/temp.html">Max Temperature</a></li>
-                <li><a href="visualizations/humidity.html">Humidity</a></li>
-                <li><a href="visualizations/cloudiness.html">Cloudiness</a></li>
-                <li><a href="visualizations/wind-speed.html">Wind Speed</a></li>
+                <li><a href="temp.html">Max Temperature</a></li>
+                <li><a href="humidity.html">Humidity</a></li>
+                <li><a href="cloudiness.html">Cloudiness</a></li>
+                <li><a href="wind-speed.html">Wind Speed</a></li>
               </ul>
             </li>
 
             <!-- small screen dropdown -->
             <a href="#" class="mobile-button" id="small-screen-dropdown" role="button">Plots<span class="caret"></span></a>
             <ul class="nav navbar-nav mobile-menu" id="small-screen-dropdown-list">
-              <li><a href="visualizations/temp.html">Max Temperature</a></li>
-              <li><a href="visualizations/humidity.html">Humidity</a></li>
-              <li><a href="visualizations/cloudiness.html">Cloudiness</a></li>
-              <li><a href="visualizations/wind-speed.html">Wind Speed</a></li>
+              <li><a href="temp.html">Max Temperature</a></li>
+              <li><a href="humidity.html">Humidity</a></li>
+              <li><a href="cloudiness.html">Cloudiness</a></li>
+              <li><a href="wind-speed.html">Wind Speed</a></li>
             </ul>
 
             <li><a href="comparison.html">Comparison</a></li>
@@ -75,12 +75,11 @@
         <!-- main content -->
         <main class="col-md-7 col-xs-12">
           <div class="main-padding">
-            <h1 class="header">Summary: Latitude vs. X</h1>
+            <h1 class="header">Max Temperature</h1>
             <hr>
             <section class="main-content">
-              <img class="main-image" src="Resources/assets/images/Fig1.png" alt="max temperature vs latitude">
-              <p>The purpose of this project was to analyze how weather changes as you get closer to or further from the equator. Weather parameters considered here are temperature, cloudiness, wind speed, and humidity.</p>
-              <p>To accomplish this objective, weather data were pulled from the <a href="https://openweathermap.org/api">OpenWeatherMap API</a> to assemble a dataset on over 500 cities across different latitudes. After assembling the dataset, python Matplotlib library was used to plot weather parameters vs. latitude. Finally, this visualization dashboard was created using HTML and CSS. This site provides the source data, visualizations, as well as explanations of how weather changes across latitudes on Earth.</p>
+              <img class="main-image-nonfloat" src="Resources/assets/images/Fig1.png" alt="cloudiness vs latitude">
+              <p>As expected, the weather becomes much warmer as one approaches the equator (0 degree latitude). Temperature in this near-equator region is known to be consistently high throughout the year. More interestingly, the temperature distribution is almost symmetric over ~20 degrees latitude, with the highest temperature occurs near 20 degrees latitude. This is due to the slight tilt of the earth at the time of the year when data were gathered. Note that at higher latitudes, the southern hemisphere is slightly warmer than the northern hemisphere, even though the time already passes spring equinox. This is due to the lagging when temperature adjusts to Earth's tilt over time.</p>
             </section>
           </div>
         </main>
@@ -92,24 +91,24 @@
             <hr>
             <section class="container-fluid">
               <div class="row side-row">
-                <div class="col-md-6 col-xs-3">
-                  <a href="visualizations/temp.html">
+                <div class="col-md-6 col-xs-3 side-highlight">
+                  <a href="temp.html">
                     <img src="Resources/assets/images/Fig1.png" alt="max temperature vs latitude" class="side-image">
                   </a>
                 </div>
                 <div class="col-md-6 col-xs-3">
-                  <a href="visualizations/humidity.html">
+                  <a href="humidity.html">
                     <img src="Resources/assets/images/Fig2.png" alt="humidity vs latitude" class="side-image">
                   </a>
                 </div>
                 <div class="w-100"></div>
                 <div class="col-md-6 col-xs-3">
-                  <a href="visualizations/cloudiness.html">
+                  <a href="cloudiness.html">
                     <img src="Resources/assets/images/Fig3.png" alt="cloudiness vs latitude" class="side-image">
                   </a>
                 </div>
                 <div class="col-md-6 col-xs-3">
-                  <a href="visualizations/wind-speed.html">
+                  <a href="wind-speed.html">
                     <img src="Resources/assets/images/Fig4.png" alt="wind speed vs latitude" class="side-image">
                   </a>
                 </div>
